# lunar-birthday-ical

./: .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: deploy-web.yaml  deploy-web.yml  publish-to-pypi.yaml  publish-to-test-pypi.yaml  pypi-publish.yaml  tests.yaml
config/: example-lunar-birthday.yaml  not-a-public-holiday.yaml
src/lunar_birthday_ical/: calendar.py  config.py  ical.py  icalendar.py  lunar.py  main.py  pastebin.py  utils.py
tests/: test_dict_union.py  test_ical.py  test_icalendar.py  test_main.py  test_pastebin.py  test_utils.py
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  i18n.ts  main.tsx  types.ts
web/src/components/: ConfigForm.tsx  EventForm.tsx  EventList.tsx  FAQModal.tsx  ObservanceForm.tsx  ObservanceList.tsx  icons.tsx
web/src/components/ui/: button.tsx  calendar.tsx  card.tsx  input.tsx  label.tsx  popover.tsx  tag-input.tsx  textarea.tsx
web/src/lib/: constants.ts  holidays.ts  ical.ts  lunar.ts
web/src/locales/: en.json  zh.json
