[project]
name = "lunar-birthday-ical"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ak1ra", email = "git@ak1ra.xyz"},
]
dependencies = ["PyYAML>=6.0.2", "icalendar>=6.1.1", "lunar-python>=1.3.12"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
