[project]
name = "lunar-birthday-ical"
dynamic = ["version"]
description = "A command line tool written in Python 3 for creating lunar birthday events"
authors = [
    {name = "ak1ra", email = "git@ak1ra.xyz"},
]
dependencies = [
    "argcomplete>=3.5.3",
    "httpx>=0.28.1",
    "icalendar>=6.1.1",
    "lunar-python>=1.3.12",
    "PyYAML>=6.0.2",
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["lunar", "birthday", "icalendar"]
readme = {file = "README.md", content-type = "text/markdown"}

# A previous PEP had specified license to be a table with a file or a text key, this format is now deprecated.
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license-and-license-files
license = "MIT"


[project.urls]
Homepage = "https://github.com/ak1ra-lab/lunar-birthday-ical"
Changelog = "https://github.com/ak1ra-lab/lunar-birthday-ical/blob/master/CHANGELOG.md"


[project.scripts]
lunar-birthday-ical = "lunar_birthday_ical.main:main"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.build]
includes = [
    "src",
    "tests",
    "config/example-lunar-birthday.yaml",
    "config/not-a-public-holiday.yaml",
]


[tool.pdm.version]
source = "scm"

# All development dependencies are included as long as --prod is not passed and -G doesn't specify any dev groups.
[dependency-groups]
tests = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
lint = [
    "ruff>=0.9.4",
]
dev = [
    {include-group = "tests"},
    {include-group = "lint"},
    "nox>=2024.10.9",
    "pre-commit>=4.2.0",
]
